--- a/package.json
+++ b/package.json
@@ -15,13 +15,21 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.26.2",
+    "lenis": "^1.3.17",
     "lucide-react": "^0.562.0",
     "next": "16.1.3",
     "next-themes": "^0.4.6",
     "radix-ui": "^1.4.3",
     "react": "19.2.3",
+    "react-activity-calendar": "^3.0.5",
     "react-dom": "19.2.3",
-    "react-wrap-balancer": "^1.1.1"
+    "react-snowfall": "^2.4.0",
+    "react-tooltip": "^5.30.0",
+    "react-wrap-balancer": "^1.1.1",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
