--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lenis": "^1.3.17",
     "lucide-react": "^0.562.0",
     "next": "16.1.3",
+    "next-intl": "^4.7.0",
     "next-themes": "^0.4.6",
     "radix-ui": "^1.4.3",
     "react": "19.2.3",
@@ -29,6 +30,7 @@
     "react-snowfall": "^2.4.0",
     "react-tooltip": "^5.30.0",
     "react-wrap-balancer": "^1.1.1",
+    "shiki": "^3.21.0",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
