--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
+    "@prisma/adapter-pg": "^7.3.0",
+    "@prisma/client": "^7.3.0",
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-separator": "^1.1.8",
@@ -21,9 +24,11 @@
     "framer-motion": "^12.26.2",
     "lenis": "^1.3.17",
     "lucide-react": "^0.562.0",
+    "minio": "^8.0.6",
     "next": "16.1.3",
     "next-intl": "^4.7.0",
     "next-themes": "^0.4.6",
+    "pg": "^8.17.2",
     "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-activity-calendar": "^3.0.5",
@@ -37,11 +42,15 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/pg": "^8.16.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.3",
+    "prisma": "^7.3.0",
     "tailwindcss": "^4",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.21.0",
     "typescript": "^5"
   }
 }
