--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.3",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.26.2",
     "lenis": "^1.3.17",
     "lucide-react": "^0.562.0",
     "minio": "^8.0.6",
     "next": "16.1.3",
+    "next-auth": "^5.0.0-beta.30",
     "next-intl": "^4.7.0",
     "next-themes": "^0.4.6",
     "pg": "^8.17.2",
