--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^17.2.3",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.26.2",
+    "jszip": "^3.10.1",
     "lenis": "^1.3.17",
     "lucide-react": "^0.562.0",
     "minio": "^8.0.6",
@@ -43,6 +44,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/jszip": "^3.4.1",
     "@types/node": "^20",
     "@types/pg": "^8.16.0",
     "@types/react": "^19",
