--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "react-tooltip": "^5.30.0",
     "react-wrap-balancer": "^1.1.1",
     "shiki": "^3.21.0",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
