--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@hookform/resolvers": "^5.2.2",
     "@prisma/adapter-pg": "^7.3.0",
     "@prisma/client": "^7.3.0",
     "@radix-ui/react-avatar": "^1.1.11",
@@ -37,6 +38,7 @@
     "react": "19.2.3",
     "react-activity-calendar": "^3.0.5",
     "react-dom": "19.2.3",
+    "react-hook-form": "^7.71.1",
     "react-snowfall": "^2.4.0",
     "react-tooltip": "^5.30.0",
     "react-wrap-balancer": "^1.1.1",
