--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "framer-motion": "^12.26.2",
     "jszip": "^3.10.1",
     "lenis": "^1.3.17",
-    "lucide-react": "^0.562.0",
+    "lucide-react": "^0.575.0",
     "minio": "^8.0.6",
     "next": "16.1.3",
     "next-auth": "^5.0.0-beta.30",
@@ -56,7 +56,7 @@
     "shiki": "^3.21.0",
     "sonner": "^2.0.7",
     "swr": "^2.4.0",
-    "tailwind-merge": "^3.4.0",
+    "tailwind-merge": "^3.5.0",
     "zod": "^4.3.6"
   },
   "devDependencies": {
@@ -69,9 +69,11 @@
     "eslint": "^9",
     "eslint-config-next": "16.1.3",
     "prisma": "^7.3.0",
+    "shadcn": "^3.8.5",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
     "tsx": "^4.21.0",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
 }
