--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-tooltip": "^5.30.0",
     "react-wrap-balancer": "^1.1.1",
     "shiki": "^3.21.0",
+    "simple-icons": "^16.9.0",
     "sonner": "^2.0.7",
     "swr": "^2.4.0",
     "tailwind-merge": "^3.5.0",
