--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start -p 3001",
     "lint": "eslint",
-    "seed": "tsx prisma/seed.ts"
+    "seed": "tsx prisma/seed.ts",
+    "i18n:scan": "tsx scripts/find-hardcoded-strings.ts"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
