--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "next build",
     "start": "next start -p 3001",
     "lint": "eslint",
-    "seed": "tsx prisma/seed.ts",
+    "db:push": "prisma db push",
+    "db:migrate": "prisma migrate dev",
+    "db:generate": "prisma generate",
+    "db:studio": "prisma studio",
+    "db:validate": "prisma validate",
     "i18n:scan": "tsx scripts/find-hardcoded-strings.ts"
   },
   "dependencies": {
