--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "db:generate": "prisma generate",
     "db:studio": "prisma studio",
     "db:validate": "prisma validate",
-    "i18n:scan": "tsx scripts/find-hardcoded-strings.ts"
+    "i18n:scan": "tsx scripts/find-hardcoded-strings.ts",
+    "types:check": "tsc --noEmit"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
@@ -29,6 +30,7 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@tiptap/extension-code-block-lowlight": "^3.20.0",
     "@tiptap/extension-image": "^3.19.0",
     "@tiptap/extension-link": "^3.19.0",
     "@tiptap/extension-placeholder": "^3.19.0",
@@ -42,6 +44,7 @@
     "framer-motion": "^12.26.2",
     "jszip": "^3.10.1",
     "lenis": "^1.3.17",
+    "lowlight": "^3.3.0",
     "lucide-react": "^0.575.0",
     "minio": "^8.0.6",
     "next": "16.1.3",
