--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev -p 3001",
-    "build": "next build",
+    "build": "npx prisma generate && next build",
     "start": "next start -p 3001",
     "lint": "eslint",
     "db:push": "prisma db push",
@@ -13,7 +13,8 @@
     "db:studio": "prisma studio",
     "db:validate": "prisma validate",
     "i18n:scan": "tsx scripts/find-hardcoded-strings.ts",
-    "types:check": "tsc --noEmit"
+    "types:check": "tsc --noEmit",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
@@ -83,7 +84,8 @@
     "ts-node": "^10.9.2",
     "tsx": "^4.21.0",
     "tw-animate-css": "^1.4.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "@prisma/config": "^7.3.0"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
