--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "db:studio": "drizzle-kit studio",
     "db:validate": "tsc --noEmit",
     "db:prod:init": "npx drizzle-kit push && npx tsx lib/db/seed.ts",
+    "db:seed": "tsx lib/db/seed.ts",
     "i18n:scan": "tsx scripts/find-hardcoded-strings.ts",
     "types:check": "tsc --noEmit"
   },
