--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,8 @@ services:
       timeout: 5s
       retries: 5
       start_period: 15s
+    networks:
+      - coolify
 
   minio:
     image: minio/minio:latest
@@ -31,7 +33,13 @@ services:
       - "9003:9001"
     volumes:
       - minio_data:/data
+    networks:
+      - coolify
 
 volumes:
   postgres_data:
   minio_data:
+
+networks:
+  coolify:
+    external: true
